# email-outreach-app

./: .env.example  .gitignore  FOLLOWUP_FEATURES.md  README.md  alembic.ini  codex_handoff_prompt.md  dev.sh  outreach.db-journal  outreach.db-shm  outreach.db-wal  outreach_agent_spec.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2bb3d6b44b70_add_sender_name_to_gmail_accounts.py  758202c94898_add_signature_to_gmail_accounts.py  8a9f3c2d4e5f_add_leads_tags_followup_tables.py
app/: __init__.py  main.py
app/api/: auth.py  campaigns.py  followups.py  leads.py  pages.py  reviews.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  models.py  session.py
app/graphs/: __init__.py  campaign_graph.py  recipient_graph.py  state.py
app/graphs/nodes/: __init__.py  campaign_nodes.py  recipient_nodes.py
app/schemas/: auth.py  campaign.py  csv_inference.py  draft.py  followup.py  leads.py  recipient.py  review.py  validation.py
app/services/: csv_loader.py  csv_profiler.py  draft_generation_service.py  followup_service.py  gmail_client.py  idempotency_service.py  lead_service.py  llm_client.py  progress_manager.py  schema_inference_service.py  send_service.py  validation_service.py
app/static/: campaign.css  style.css
app/templates/: __init__.py  auth.html  campaign_detail.html  campaign_new.html  campaigns.html  index.html  leads.html
scripts/: backfill_leads.py  cleanup_drafts.py  final_check.py  fix_migration.py  migrate.py  run_migrations.py  verify_schema.py
tests/fixtures/: sample_leads.csv
tests/integration/: test_campaign_workflow.py
tests/unit/: test_csv_loader.py  test_csv_profiler.py  test_llm_client.py  test_security.py  test_validation_service.py
